tests/error/inout_errors/moved_iterator.err
Error: Not owned (at $FILE:14:13)
   | 
12 | @guppy(module)
13 | def test(q: array[int, 3]) -> None:
14 |     for i in q:
   |              ^ Function `__iter__` wants to take ownership of this
   |                argument, but `test` doesn't own `q`
   | 
13 | def test(q: array[int, 3]) -> None:
   |          ---------------- Argument `q` is only borrowed. Consider taking ownership:
   |                           `q: array[int, 3] @owned`
   | 
14 |     for i in q:
   |              - Or consider copying this argument: `q.copy()`

Guppy compilation failed due to 1 previous error
